--- a/1. The Target Element.html
+++ b/1. The Target Element.html
@@ -7,19 +7,21 @@
         <title>Event Target Demo</title>
         <link rel="stylesheet" href="./assets/style.css">
     </head>
-    <body>
+    <body >
         <h1>Interactive Web Pages - Events Demonstration</h1>
         <h2>Target Element Demo</h2>
         <p> Click each element below to view the concept of the target element.</p>
-        <div class="wrap">DIV
-            <p class="hint">P
-                <a href="#">A</a>
+        <div class="wrap" >DIV
+            <p class="hint" sandbox="allow-modals">P
+                <a href="#" sandbox="allow-modals">A</a>
             </p>
         </div>
 
         <script>
             // Selecting the div element
+
             var div = document.querySelector('div.wrap')
+
 
             // Attaching an onclick event handler
             div.onclick = function(e) {
@@ -32,5 +34,5 @@
                 }, 0)
             }
         </script>
-    </body> 
-</html> 
+    </body>
+</html>
